<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.menu.MenuFragment">

    <ImageButton
        android:id="@+id/buttonExit"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_gravity="right"
        android:layout_margin="8dp"
        android:background="#00000000"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_exit" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/ttcommonsbold"
            android:text="@string/title_menu"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/background_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ttcommonsbold"
            android:gravity="center|left"
            android:text="@string/phone"
            android:textColorLink="@android:color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_web"
            android:drawablePadding="10dp"
            android:fontFamily="@font/ttcommonsbold"
            android:gravity="center|left"
            android:text="@string/web"
            android:textColorLink="@android:color/black"
            android:textSize="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_point"
            android:drawablePadding="14dp"
            android:fontFamily="@font/ttcommonsbold"
            android:gravity="center|left"
            android:text="@string/address"
            android:textColor="@android:color/black"
            android:textSize="18dp" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</FrameLayout>